# ankify

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
src/ankify/: anki.py  cli.py  parser.py  sync.py
tests/: test_parser.py  test_render.py  test_sync.py
