[project]
name = "ankify"
version = "0.1.0"
description = "Sync Markdown notes to Anki via AnkiConnect"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mistune>=3.2.1",
]

[project.scripts]
ankify = "ankify.cli:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
